Added a readme file with optimization problem structure fixed sh_listen working

--- a/items/knxcontrol.conf
+++ b/items/knxcontrol.conf
@@ -33,7 +33,7 @@
 		[[[current]]]
 			[[[[temperature]]]]	
 				type = num
-				sh_listen = 'outside.measurements.temperature()'
+				sh_listen = 'sh.outside.measurements.temperature()'
 
 			[[[[humidity]]]]	
 				type = num
@@ -42,7 +42,7 @@
 			[[[[irradiation]]]]
 				[[[[[sensor]]]]]
 					type = num
-					sh_listen = '127*outside.measurements.lightstrength()'
+					sh_listen = '127*sh.outside.measurements.lightstrength()'
 					orientation = -5
 					tilt = 10
 	
@@ -57,12 +57,12 @@
 						
 			[[[[precipitation]]]]	
 				type = num
-				sh_listen = 'outside.measurements.rain()'
+				sh_listen = 'sh.outside.measurements.rain()'
 
 			[[[[wind]]]]	
 				[[[[[speed]]]]]
 					type = num
-					sh_listen = 'outside.measurements.windspeed()'
+					sh_listen = 'sh.outside.measurements.windspeed()'
 				[[[[[direction]]]]]
 					type = num
 					sh_listen = ''
@@ -78,13 +78,13 @@
 	[[energy]]
 		[[[electricity]]]
 			type = num
-			sh_listen = 'flukso.electricity_total()'
+			sh_listen = 'sh.flukso.electricity_total()'
 			quantity = 'Power'
 			unit = 'W'
 			
 		[[[gas]]]
 			type = num
-			sh_listen = 'flukso.gas()'
+			sh_listen = 'sh.flukso.gas()'
 			quantity = 'Power'
 			unit = 'W'
 	
@@ -100,12 +100,20 @@
 		[[[living_zone]]]
 			[[[[temperature]]]]
 				type = num
-				sh_listen = '0.5*living.measurements.temperature_door() + 0.5*study.measurements.temperature()'
+				sh_listen = '0.5*sh.living.measurements.temperature_door() + 0.5*sh.study.measurements.temperature()'
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
-			[[[[shading]]]]
-				type = num
+			[[[[irradiation]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
+			[[[[emission]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
 				
 		[[[sleeping_zone]]]
 			[[[[temperature]]]]
@@ -114,8 +122,16 @@
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
-			[[[[shading]]]]
-				type = num
+			[[[[irradiation]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
+			[[[[emission]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
 				
 		[[[bathroom_zone]]]
 			[[[[temperature]]]]
@@ -124,8 +140,16 @@
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
-			[[[[shading]]]]
-				type = num
+			[[[[irradiation]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
+			[[[[emission]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
 				
 		[[[unheated_zone]]]
 			[[[[temperature]]]]
@@ -134,8 +158,16 @@
 			[[[[airquality]]]]
 				type = num
 				sh_listen = ''
-			[[[[shading]]]]
-				type = num
+			[[[[irradiation]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
+			[[[[emission]]]]
+				[[[[[power]]]]]
+					type = num
+				[[[[[setpoint]]]]]
+					type = num
 
 ######################################################################################
 	[[ventilation]]
@@ -149,48 +181,36 @@
 				sh_send = ''
 
 ######################################################################################
-	[[heat]]
-		[[[production]]]
-			[[[[heatpump]]]]
-				systemtype = 'heatpump'
-				[[[[[power]]]]]
-					type = num
-					sh_listen = 'flukso.electricity_heatpump()'
-				[[[[[control]]]]]
-					type = num
-					sh_listen = ''
-					sh_send = ''
-			[[[[gasboiler]]]]
-				systemtype = 'condensing gas boiler'
-				[[[[[power]]]]]
-					type = num
-					sh_listen = 'flukso.gas()'
-				[[[[[control]]]]]
-					type = num
-					sh_listen = ''
-					sh_send = ''
-
-		[[[emission]]]
-			[[[[firstfloor]]]]
-				systemtype = 'floorheating'
-				[[[[[power]]]]]
-					type = num
-					sh_listen = ''
-				[[[[[control]]]]]
-					type = num
-					sh_listen = ''
+	[[heat_production]]
+		[[[heatpump]]]
+			systemtype = 'heatpump'
+			[[[[power]]]]
+				type = num
+				sh_listen = 'sh.flukso.electricity_heating()'
+			[[[[setpoint]]]]
+				type = num
+				sh_listen = ''
+				sh_send = ''
+		[[[gasboiler]]]
+			systemtype = 'condensing gas boiler'
+			[[[[power]]]]
+				type = num
+				sh_listen = 'sh.flukso.gas()'
+			[[[[setpoint]]]]
+				type = num
+				sh_listen = ''
+				sh_send = ''
 
 ######################################################################################
-	[[electricity]]
-		[[[production]]]
-			[[[[pv]]]]
-				systemtype = 'pv'
-				[[[[[power]]]]]
-					type = num
-					sh_listen = ''
-					eval = value
-				[[[[[control]]]]]
-					type = num
-					sh_listen = ''
+	[[electricity_production]]
+#			[[[pv]]]
+#				systemtype = 'pv'
+#				[[[[power]]]]
+#					type = num
+#					sh_listen = ''
+#					eval = value
+#				[[[[setpoint]]]]
+#					type = num
+#					sh_listen = ''
 
 ######################################################################################
