Added and tested alarms to knxcontrol plugin

--- a/items/knxcontrol.conf
+++ b/items/knxcontrol.conf
@@ -46,10 +46,7 @@
 					orientation = -5
 					tilt = 10
 	
-				[[[[[direct]]]]]
-					type = num
-
-				[[[[[diffuse]]]]]
+				[[[[[horizontal]]]]]
 					type = num
 
 				[[[[[clouds]]]]]
