added flukso logic as a separate plugin removes sh_listen brute force function as it was giving errors removed obsolite logics

--- a/etc/plugin.conf
+++ b/etc/plugin.conf
@@ -9,7 +9,12 @@
 	class_name = KNXControl
 	class_path = plugins.knxcontrol
 	mysql_pass = admin
-   
+
+[flukso]
+	class_name = Flukso
+	class_path = plugins.flukso
+	ip = 192.168.1.8
+
 [visu]
 	class_name = WebSocket
 	class_path = plugins.visu
