--- a/items/flukso.conf
+++ b/items/flukso.conf
@@ -1,19 +1,15 @@
 [flukso]
-	ip = '192.168.1.8'
 	[[electricity_total]]
 		type = num
-		sensor = 'ce8ab098fc7479dcbaaaaaaaaaaaaaaa'
-		token  = 'cccf535e298d18959aaaaaaaaaaaaaaa'
+		flukso_sensor = 'ce8ab098fc7479dcb3699f307c8e88a7'
 		unit   = 'watt'
 			
 	[[electricity_heating]]
 		type = num
-		sensor = '56f28789f52236df4aaaaaaaaaaaaaaa'
-		token  = '895bbd6858e534aa2aaaaaaaaaaaaaaa'
+		flukso_sensor = '56f28789f52236df4647d06111ff515a'
 		unit   = 'watt'
 		
 	[[gas]]
 		type = num
-		sensor = 'd5a747b86224834f7aaaaaaaaaaaaaaa'
-		token  = 'eb11d91053cf077beaaaaaaaaaaaaaaa'
+		flukso_sensor = 'd5a747b86224834f745f4c9775d70241'
 		unit   = 'watt'
