added sh_listen parsing in a consistent way fixed nan bug in flukso item setting moved websocket token to the visu plugin

--- a/items/building.conf
+++ b/items/building.conf
@@ -14,6 +14,7 @@
 			knx_dpt = 9
 			knx_listen = 0/0/141
 			knx_init = 0/0/141
+			knxcontrol = ambient_temperature
 
 		[[[lightstrength]]]
 			type = num
@@ -41,11 +42,11 @@
 # living
 ######################################################################################
 [living]
+	zone = 'living_zone'
 	floorarea = 60
 	volume = 400
 	lossarea = 295
 	wallarea = 320
-	zone = 'living_zone'
 	U = 0.60
 
 ######################################################################################
@@ -162,11 +163,11 @@
 # Study
 ######################################################################################
 [study]
+	zone = 'living_zone'
 	floorarea = 60
 	volume = 400
 	lossarea = 295
 	wallarea = 320
-	zone = 'living_zone'
 	U = 0.60
 
 ######################################################################################
