--- a/items/knxcontrol.conf
+++ b/items/knxcontrol.conf
@@ -18,16 +18,7 @@
 
 # File containing required items for knxcontrol to work
 
-[knxcontrol]
-######################################################################################
-	[[mysql]]
-		password = 'admin'
-		backupdir = ''
-		
-######################################################################################	
-	[[websocket]]
-		token = 'admin'
-		
+[knxcontrol]	
 ######################################################################################
 	[[weather]]	
 		[[[current]]]
@@ -174,7 +165,7 @@
 				sh_send = ''
 	
 			[[[[heatrecovery]]]]
-				type = bool
+				type = num
 				sh_send = ''
 
 ######################################################################################
