--- a/items/knxcontrol.conf
+++ b/items/knxcontrol.conf
@@ -33,8 +33,8 @@
 			[[[[irradiation]]]]
 				[[[[[sensor]]]]]
 					type = num
-					sh_listen = '127*sh.outside.measurements.lightstrength()'
-					orientation = -5
+					sh_listen = 'sh.outside.measurements.lightstrength()/127'
+					orientation = 175
 					tilt = 10
 	
 				[[[[[horizontal]]]]]
