Added a plugin AllTrue to check if a condition is true for all items with the same master usefull for checking if all lights are off and turning on an indicator accordingly

--- a/items/building.conf
+++ b/items/building.conf
@@ -58,7 +58,8 @@
 			knx_send = 1/1/63
 			knx_init = 1/1/63
 			visu_acl = rw
-			
+			alltrue_master = all_lights_off
+	
 		[[[light_dinnertable]]]
 			type = bool
 			knx_dpt = 1
@@ -66,6 +67,7 @@
 			knx_send = 1/1/71
 			knx_init = 1/1/71
 			visu_acl = rw
+			alltrue_master = all_lights_off
 				
 		[[[light_tv]]]
 			type = num
@@ -74,6 +76,7 @@
 			knx_send = 1/1/74
 			knx_init = 1/4/74
 			visu_acl = rw
+			alltrue_master = all_lights_off
 			
 			[[[[value]]]]
 				type = num
@@ -82,6 +85,7 @@
 				knx_send = 1/3/74
 				knx_init = 1/5/74
 				visu_acl = rw
+				alltrue_master = all_lights_off
 			
 ######################################################################################		
 	[[windows]]
@@ -178,6 +182,7 @@
 			knx_send = 1/1/43
 			knx_init = 1/1/43
 			visu_acl = rw
+			alltrue_master = all_lights_off
 		
 			
 ######################################################################################		
