updated shading control

--- a/items/knxcontrol.conf
+++ b/items/knxcontrol.conf
@@ -97,6 +97,7 @@
 					type = num
 				[[[[[setpoint]]]]]
 					type = num
+					value = 800
 			[[[[emission]]]]
 				[[[[[power]]]]]
 					type = num
