--- a/items/building.conf
+++ b/items/building.conf
@@ -41,211 +41,224 @@
 ######################################################################################
 # living
 ######################################################################################
-[living]
-	zone = 'living_zone'
-	floorarea = 60
-	volume = 400
-	lossarea = 295
-	wallarea = 320
-	U = 0.60
+[living_zone]
+	zonetype = 'heated'
 
-######################################################################################
-	[[lights]]	
-		[[[spots_kitchen]]]
-			type = bool
-			knx_dpt = 1
-			knx_listen = 1/1/63
-			knx_send = 1/1/63
-			knx_init = 1/1/63
-			visu_acl = rw
-			alltrue_master = all_lights_off
-	
-		[[[light_dinnertable]]]
-			type = bool
-			knx_dpt = 1
-			knx_listen = 1/1/71
-			knx_send = 1/1/71
-			knx_init = 1/1/71
-			visu_acl = rw
-			alltrue_master = all_lights_off
-				
-		[[[light_tv]]]
+	[[temperature]]
+		type = num
+		sh_listen = '0.5*sh.living.measurements.temperature_door() + 0.5*sh.study.measurements.temperature()'
+
+	[[irradiation]]
+		[[[value]]]
 			type = num
-			knx_dpt = 1
-			knx_listen = 1/4/74
-			knx_send = 1/1/74
-			knx_init = 1/4/74
-			visu_acl = rw
-			alltrue_master = all_lights_off
-			
-			[[[[value]]]]
+		[[[setpoint]]]
+			type = num
+
+	[[living]]
+		floorarea = 60
+		volume = 400
+		lossarea = 295
+		wallarea = 320
+		U = 0.60
+######################################################################################
+		[[[lights]]]
+			[[[[spots_kitchen]]]]
+				type = bool
+				knx_dpt = 1
+				knx_listen = 1/1/63
+				knx_send = 1/1/63
+				knx_init = 1/1/63
+				visu_acl = rw
+				alltrue_master = all_lights_off
+	
+			[[[[light_dinnertable]]]]
+				type = bool
+				knx_dpt = 1
+				knx_listen = 1/1/71
+				knx_send = 1/1/71
+				knx_init = 1/1/71
+				visu_acl = rw
+				alltrue_master = all_lights_off
+				
+			[[[[light_tv]]]]
 				type = num
-				knx_dpt = 5
-				knx_listen = 1/5/74
-				knx_send = 1/3/74
-				knx_init = 1/5/74
+				knx_dpt = 1
+				knx_listen = 1/4/74
+				knx_send = 1/1/74
+				knx_init = 1/4/74
 				visu_acl = rw
 				alltrue_master = all_lights_off
 			
-######################################################################################		
-	[[windows]]
-		[[[back]]]
-			area = 5.2528
-			orientation = -5
-			tilt = 90
-			transmittance = 0.5
-			U = 1.10
-
-			[[[[shading]]]]
-				transmittance = 0.1
-				[[[[[move]]]]]
-					type = num
-					visu_acl = rw
-					knx_dpt = 1
-					knx_send = 2/1/61
-					knx_listen = 2/1/61
-				[[[[[stop]]]]]
-					type = num
-					visu_acl = rw
-					enforce_updates = yes
-					knx_dpt = 1
-					knx_send = 2/2/61
 				[[[[[value]]]]]
 					type = num
 					knx_dpt = 5
-					knx_listen = 2/4/61
-					knx_send = 2/3/61
-					knx_init = 2/4/61
+					knx_listen = 1/5/74
+					knx_send = 1/3/74
+					knx_init = 1/5/74
 					visu_acl = rw
-				[[[[[auto]]]]]
-					type = bool
-					value = True
-					visu_acl = rw
-				[[[[[override]]]]]
-					type = bool
-					value = False
-					visu_acl = rw
-				[[[[[closed]]]]]
-					type = bool
-					value = False
-					visu_acl = rw
+					alltrue_master = all_lights_off
+			
+######################################################################################		
+		[[[windows]]]
+			[[[[back]]]]
+				area = 5.2528
+				orientation = -5
+				tilt = 90
+				transmittance = 0.5
+				U = 1.10
+
+				[[[[[shading]]]]]
+					transmittance = 0.1
+					open_value = 0
+					closed_value = 255
+					[[[[[[move]]]]]]
+						type = num
+						visu_acl = rw
+						knx_dpt = 1
+						knx_send = 2/1/61
+						knx_listen = 2/1/61
+					[[[[[[stop]]]]]]
+						type = num
+						visu_acl = rw
+						enforce_updates = yes
+						knx_dpt = 1
+						knx_send = 2/2/61
+					[[[[[[value]]]]]]
+						type = num
+						knx_dpt = 5
+						knx_listen = 2/4/61
+						knx_send = 2/3/61
+						knx_init = 2/4/61
+						visu_acl = rw
+					[[[[[[auto]]]]]]
+						type = bool
+						value = True
+						visu_acl = rw
+					[[[[[[override]]]]]]
+						type = bool
+						value = False
+						visu_acl = rw
+					[[[[[[closed]]]]]]
+						type = bool
+						value = False
+						visu_acl = rw
 					
-	[[doors]]
+		[[[doors]]]
 
 
 
-	[[appliances]]
+		[[[appliances]]]
 
 ######################################################################################
-	[[scenes]]
-		type = num
-		knx_dpt = 5
-		knx_listen = 0/0/11
-		knx_send = 1/0/11
-		knx_init = 1/0/11
-		visu_acl = rw
+		[[[scenes]]]
+			type = num
+			knx_dpt = 5
+			knx_listen = 0/0/11
+			knx_send = 1/0/11
+			knx_init = 1/0/11
+			visu_acl = rw
 			
 ######################################################################################
-	[[measurements]]
-		[[[temperature_door]]]
-			type = num
-			eval = value-2.5
-			knx_dpt = 9
-			knx_listen = 3/1/71
-			knx_init = 3/1/71
+		[[[measurements]]]
+			[[[[temperature_door]]]]
+				type = num
+				eval = value-2.5
+				knx_dpt = 9
+				knx_listen = 3/1/71
+				knx_init = 3/1/71
 
-		[[[temperature_window]]]
-			type = num
-			eval = value-2.5
-			knx_dpt = 9
-			knx_listen = 3/1/72
-			knx_init = 3/1/72
+			[[[[temperature_window]]]]
+				type = num
+				eval = value-2.5
+				knx_dpt = 9
+				knx_listen = 3/1/72
+				knx_init = 3/1/72
 
 
 ######################################################################################
 # Study
 ######################################################################################
-[study]
-	zone = 'living_zone'
-	floorarea = 60
-	volume = 400
-	lossarea = 295
-	wallarea = 320
-	U = 0.60
+	[[study]]
+		floorarea = 60
+		volume = 400
+		lossarea = 295
+		wallarea = 320
+		U = 0.60
 
 ######################################################################################
-	[[lights]]	
-		[[[light]]]
-			type = bool
-			knx_dpt = 1
-			knx_listen = 1/1/43
-			knx_send = 1/1/43
-			knx_init = 1/1/43
-			visu_acl = rw
-			alltrue_master = all_lights_off
+		[[[lights]]]
+			[[[[light]]]]
+				type = bool
+				knx_dpt = 1
+				knx_listen = 1/1/43
+				knx_send = 1/1/43
+				knx_init = 1/1/43
+				visu_acl = rw
+				alltrue_master = all_lights_off
 		
 			
 ######################################################################################		
-	[[windows]]
-		[[[front]]]
-			area = 3
-			orientation = 85
-			tilt = 90
-			transmittance = 0.5
-			U = 1.10
+		[[[windows]]]
+			[[[[front]]]]
+				area = 3
+				orientation = 85
+				tilt = 90
+				transmittance = 0.5
+				U = 1.10
 
-			[[[[shading]]]]
-				transmittance = 0.1
-				close_at_night = 0
-				[[[[[move]]]]]
-					type = num
-					visu_acl = rw
-					knx_dpt = 1
-					knx_send = 2/1/41
-					knx_listen = 2/1/41
-				[[[[[stop]]]]]
-					type = num
-					visu_acl = rw
-					enforce_updates = yes
-					knx_dpt = 1
-					knx_send = 2/2/61
-				[[[[[value]]]]]
-					type = num
-					knx_dpt = 5
-					knx_listen = 2/4/41
-					knx_send = 2/3/41
-					knx_init = 2/4/41
-					visu_acl = rw
-				[[[[[auto]]]]]
-					type = bool
-					value = True
-					visu_acl = rw
-				[[[[[override]]]]]
-					type = bool
-					value = False
-					visu_acl = rw
-				[[[[[closed]]]]]
-					type = bool
-					value = False
-					visu_acl = rw
+				[[[[[shading]]]]]
+					transmittance = 0.05
+					open_value = 0
+					closed_value = 255
+					[[[[[[move]]]]]]
+						type = num
+						visu_acl = rw
+						knx_dpt = 1
+						knx_send = 2/1/41
+						knx_listen = 2/1/41
+					[[[[[[stop]]]]]]
+						type = num
+						visu_acl = rw
+						enforce_updates = yes
+						knx_dpt = 1
+						knx_send = 2/2/61
+					[[[[[[value]]]]]]
+						type = num
+						knx_dpt = 5
+						knx_listen = 2/4/41
+						knx_send = 2/3/41
+						knx_init = 2/4/41
+						visu_acl = rw
+					[[[[[[auto]]]]]]
+						type = bool
+						value = True
+						visu_acl = rw
+					[[[[[[override]]]]]]
+						type = bool
+						value = False
+						visu_acl = rw
+					[[[[[[closed]]]]]]
+						type = bool
+						value = False
+						visu_acl = rw
 
 ######################################################################################
-	[[scenes]]
-		type = num
-		knx_dpt = 5
-		knx_listen = 0/0/11
-		knx_send = 1/0/11
-		knx_init = 1/0/11
-		visu_acl = rw
+		[[[scenes]]]
+			type = num
+			knx_dpt = 5
+			knx_listen = 0/0/11
+			knx_send = 1/0/11
+			knx_init = 1/0/11
+			visu_acl = rw
 			
 ######################################################################################
-	[[measurements]]
-		[[[temperature]]]
-			type = num
-			eval = value-2.5
-			knx_dpt = 9
-			knx_listen = 3/1/41
-			knx_init = 3/1/41
+		[[[measurements]]]
+			[[[[temperature]]]]
+				type = num
+				eval = value-2.5
+				knx_dpt = 9
+				knx_listen = 3/1/41
+				knx_init = 3/1/41
 
 
 
