fixed bug in sun position calculation and moved measurements table initialization

--- a/items/livingzone.conf
+++ b/items/livingzone.conf
@@ -1,65 +1,37 @@
 # this file will be automatically generated 
 
-
-######################################################################################
-# outside
-######################################################################################
-[outside]
-	zone = ''
-
-	[[measurements]]
-		[[[temperature]]]
-			type = num
-			eval = value
-			knx_dpt = 9
-			knx_listen = 0/0/141
-			knx_init = 0/0/141
-			knxcontrol = ambient_temperature
-
-		[[[lightstrength]]]
-			type = num
-			eval = value
-			knx_dpt = 9
-			knx_listen = 0/0/142
-			knx_init = 0/0/142
-
-		[[[rain]]]
-			type = num
-			eval = value
-			knx_dpt = 1
-			knx_listen = 0/0/144
-			knx_init = 0/0/144
-
-		[[[windspeed]]]
-			type = num
-			eval = value
-			knx_dpt = 9
-			knx_listen = 0/0/143
-			knx_init = 0/0/143
-
-
-######################################################################################
-# living
-######################################################################################
-[living_zone]
+[livingzone]
 	zonetype = 'heated'
 
 	[[temperature]]
 		type = num
-		sh_listen = '0.5*sh.living.measurements.temperature_door() + 0.5*sh.study.measurements.temperature()'
+		sh_listen = '0.5*sh.livingzone.living.measurements.temperature_door() + 0.5*sh.livingzone.study.measurements.temperature()'
+
+	[[airquality]]
+		type = num
 
 	[[irradiation]]
-		[[[value]]]
-			type = num
+		type = num
+
 		[[[setpoint]]]
 			type = num
 
+	[[emission]]
+		type = num
+
+		[[[setpoint]]]
+			type = num
+
+######################################################################################
+# living
+######################################################################################
 	[[living]]
 		floorarea = 60
 		volume = 400
 		lossarea = 295
 		wallarea = 320
 		U = 0.60
+
 ######################################################################################
 		[[[lights]]]
 			[[[[spots_kitchen]]]]
