renamed gui to app

--- a/etc/plugin.conf
+++ b/etc/plugin.conf
@@ -4,9 +4,9 @@
 	class_path = plugins.homecon
 	mysql_pass = admin
 
-[homecongui]
-	class_name = HomeConGui
-	class_path = plugins.homecongui
+[homeconapp]
+	class_name = HomeConApp
+	class_path = plugins.homeconapp
 	token = admin
 
 [knx]
