changed token in plugin.conf

--- a/etc/plugin.conf
+++ b/etc/plugin.conf
@@ -7,7 +7,7 @@
 [homeconapp]
 	class_name = HomeConApp
 	class_path = plugins.homeconapp
-	token = admin
+	token = token
 
 [knx]
 	class_name = KNX
