modified plugin mysqlpass

--- a/etc/plugin.conf
+++ b/etc/plugin.conf
@@ -2,7 +2,7 @@
 [homecon]
 	class_name = HomeCon
 	class_path = plugins.homecon
-	mysql_pass = admin
+	mysql_pass = mysql_pass
 
 [homeconapp]
 	class_name = HomeConApp
