updated conf files to not give errors

--- a/items/homecon.conf
+++ b/items/homecon.conf
@@ -20,7 +20,8 @@
 
 [homecon]	
 ######################################################################################
-	[[weather]]	
+	[[weather]]
+		homeconitem = 'weather'
 		[[[current]]]
 			[[[[temperature]]]]	
 				type = num
@@ -32,15 +33,18 @@
 
 			[[[[irradiation]]]]
 				[[[[[sensor]]]]]
+					homeconitem = 'irradiationsensor'
 					type = num
 					sh_listen = 'sh.outside.measurements.lightstrength()/127'
 					orientation = 175
 					tilt = 10
 	
 				[[[[[horizontal]]]]]
+					homeconitem = 'horizontal_irradiation'
 					type = num
 
 				[[[[[clouds]]]]]
+					homeconitem = 'clouds'
 					type = num
 						
 			[[[[precipitation]]]]	
@@ -57,9 +61,11 @@
 
 		[[[prediction]]]
 			[[[[detailed]]]]
+				homeconitem = 'weatherforecast_detailed'
 				type = list
 
 			[[[[daily]]]]
+				homeconitem = 'weatherforecast_daily'
 				type = list
 						
 ######################################################################################
