--- a/items/livingzone.conf
+++ b/items/livingzone.conf
@@ -1,7 +1,8 @@
 # this file will be automatically generated 
 
 [livingzone]
-	zonetype = 'heated'
+	homeconitem = zone
+	zonetype = heated
 
 	[[temperature]]
 		type = num
@@ -72,6 +73,7 @@
 			
 ######################################################################################		
 		[[[windows]]]
+			homeconitem = window
 			[[[[back]]]]
 				area = 5.2528
 				orientation = -5
@@ -80,6 +82,7 @@
 				U = 1.10
 
 				[[[[[shading]]]]]
+					homeconitem = shading
 					transmittance = 0.1
 					open_value = 0
 					closed_value = 255
@@ -171,6 +174,7 @@
 			
 ######################################################################################		
 		[[[windows]]]
+			homeconitem = window
 			[[[[front]]]]
 				area = 3
 				orientation = 85
@@ -179,6 +183,7 @@
 				U = 1.10
 
 				[[[[[shading]]]]]
+					homeconitem = shading
 					transmittance = 0.05
 					open_value = 0
 					closed_value = 255
