fixed some bugs and added forecast.io weatherforecast loading using an apikey

--- a/items/homecon.conf
+++ b/items/homecon.conf
@@ -16,7 +16,7 @@
 #    along with HomeCon.  If not, see <http://www.gnu.org/licenses/>.
 ######################################################################################
 
-# File containing required items for knxcontrol to work
+# File containing required items for homecon to work
 
 [homecon]	
 ######################################################################################
