update mysql with default methods and updated dynamic item creation

--- a/etc/smarthome.conf
+++ b/etc/smarthome.conf
@@ -1,9 +1,9 @@
 # smarthome.conf
 
 # home location
-lat = 50.000
-lon =  5.000
-elev = 72
+lat = 0
+lon = 0
+elev = 0
 
 # timezone
-tz = 'Europe/Brussels'
+tz = 'UTC'
