--- a/items/livingzone.conf
+++ b/items/livingzone.conf
@@ -1,8 +1,7 @@
 # this file will be automatically generated 
 
 [livingzone]
-	homeconitem = zone
-	zonetype = heated
+	homeconitem = heatedzone
 
 	[[temperature]]
 		type = num
@@ -11,11 +10,14 @@
 	[[airquality]]
 		type = num
 
-	[[irradiation]]
+	[[solargains]]
 		type = num
 
 		[[[setpoint]]]
 			type = num
+
+	[[internalgains]]
+		type = num
 
 	[[emission]]
 		type = num
