--- a/items/bathrooms.conf
+++ b/items/bathrooms.conf
@@ -1,7 +1,7 @@
 # this file will be automatically generated 
 
 [bathrooms]
-	zonetype = 'heated'
+	homeconitem = heatedzone
 
 	[[temperature]]
 		type = num
@@ -10,11 +10,14 @@
 	[[airquality]]
 		type = num
 
-	[[irradiation]]
+	[[solargains]]
 		type = num
 
 		[[[setpoint]]]
 			type = num
+
+	[[internalgains]]
+		type = num
 
 	[[emission]]
 		type = num
