changed the way items are dynamically added to be able to add items without restarting smarthome

--- a/items/homecon.conf
+++ b/items/homecon.conf
@@ -51,22 +51,22 @@
 				type = num
 				sh_listen = 'sh.outside.measurements.rain()'
 
-			[[[[wind]]]]	
-				[[[[[speed]]]]]
-					type = num
-					sh_listen = 'sh.outside.measurements.windspeed()'
-				[[[[[direction]]]]]
-					type = num
-					sh_listen = ''
-
-		[[[prediction]]]
-			[[[[detailed]]]]
-				homeconitem = 'weatherforecast_detailed'
-				type = list
-
-			[[[[daily]]]]
-				homeconitem = 'weatherforecast_daily'
-				type = list
+#			[[[[wind]]]]	
+#				[[[[[speed]]]]]
+#					type = num
+#					sh_listen = 'sh.outside.measurements.windspeed()'
+#				[[[[[direction]]]]]
+#					type = num
+#					sh_listen = ''
+#
+#		[[[prediction]]]
+#			[[[[detailed]]]]
+#				homeconitem = 'weatherforecast_detailed'
+#				type = list
+#
+#			[[[[daily]]]]
+#				homeconitem = 'weatherforecast_daily'
+#				type = list
 						
 ######################################################################################
 	[[energy]]
