--- a/app/bower.json
+++ b/app/bower.json
@@ -16,6 +16,18 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.2.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "webcomponentsjs": "^0.7.22",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.7",
+    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
+    "hydrolysis": "^1.24.0",
+    "page": "^1.7.1",
+    "marked": "^0.3.5",
+    "marked-element": "^1.1.3",
+    "prism": "^1.5.0",
+    "promise-polyfill": "^5.2.1",
+    "web-animations-js": "^2.2.1",
+    "font-roboto": "^0.0.2"
   }
 }
