--- a/app/bower.json
+++ b/app/bower.json
@@ -1,33 +1,18 @@
 {
-  "name": "homecon",
-  "homepage": "https://github.com/BrechtBa/homecon",
+  "name": "homecon-app",
   "authors": [
-    "brecht <brecht.baeten@gmail.com>"
+    "Brecht Baeten"
   ],
-  "description": "",
-  "main": "",
-  "moduleType": [],
-  "license": "GPL v3",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "private": true,
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "webcomponentsjs": "^0.7.22",
+    "polymer": "polymer/polymer#^1.4.0",
+    "app-layout": "polymerlabs/app-layout#master",
+    "app-route": "polymerelements/app-route#~0.9.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.10",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
-    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
-    "hydrolysis": "^1.24.0",
-    "page": "^1.7.1",
-    "marked": "^0.3.5",
-    "marked-element": "^1.1.3",
-    "prism": "^1.5.0",
-    "promise-polyfill": "^5.2.1",
-    "web-animations-js": "^2.2.1",
-    "font-roboto": "^0.0.2"
+    "neon-elements": "PolymerElements/neon-elements#^1.0.0"
+  },
+  "devDependencies": {
+    "web-component-tester": "^4.0.0"
   }
 }
