added drag and drop reordering of pages in the menu

--- a/app/bower.json
+++ b/app/bower.json
@@ -10,7 +10,8 @@
     "app-route": "polymerelements/app-route#~0.9.0",
     "iron-elements": "PolymerElements/iron-elements#^1.0.10",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
-    "neon-elements": "PolymerElements/neon-elements#^1.0.0"
+    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
+    "Sortable": "^1.4.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
