--- a/app/bower.json
+++ b/app/bower.json
@@ -11,7 +11,8 @@
     "iron-elements": "PolymerElements/iron-elements#^1.0.10",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
-    "Sortable": "^1.4.2"
+    "Sortable": "^1.4.2",
+    "web-socket": "*"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
