--- a/app/bower.json
+++ b/app/bower.json
@@ -12,7 +12,8 @@
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "Sortable": "^1.4.2",
-    "web-socket": "*"
+    "web-socket": "*",
+    "highcharts": "^5.0.5"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
