--- a/app/bower.json
+++ b/app/bower.json
@@ -13,7 +13,8 @@
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
     "Sortable": "^1.4.2",
     "web-socket": "*",
-    "highcharts": "^5.0.5"
+    "highcharts": "^5.0.5",
+    "google-chart": "GoogleWebComponents/google-chart#^1.1.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
