--- a/app/bower.json
+++ b/app/bower.json
@@ -11,10 +11,10 @@
     "iron-elements": "PolymerElements/iron-elements#^1.0.10",
     "paper-elements": "PolymerElements/paper-elements#^1.0.7",
     "neon-elements": "PolymerElements/neon-elements#^1.0.0",
-    "Sortable": "^1.4.2",
     "web-socket": "*",
     "highcharts": "^5.0.5",
-    "basic-time-picker": "BrechtBa/basic-time-picker#^0.0.1"
+    "basic-time-picker": "BrechtBa/basic-time-picker#^0.0.1",
+    "polymer-sortablejs": "^0.1.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
