--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "",
   "dependencies": {
-    "polymer-cli": "^0.11.1"
+    "bower": "^1.8.0",
+    "polymer-cli": "^0.17.0"
   },
   "devDependencies": {},
   "scripts": {
