--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hunsalz/web-socket": "github:hunsalz/web-socket",
+    "@lrnwebcomponents/json-editor": "^2.0.3",
     "@polymer/app-layout": "^3.0.0-pre.15",
     "@polymer/app-route": "^3.0.0-pre.15",
     "@polymer/iron-collapse": "github:PolymerElements/iron-collapse",
@@ -27,13 +28,18 @@
     "@polymer/iron-pages": "^3.0.0-pre.15",
     "@polymer/iron-selector": "^3.0.0-pre.15",
     "@polymer/lit-element": "github:Polymer/lit-element",
+    "@polymer/neon-animation": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-dialog": "^3.0.1",
     "@polymer/paper-dialog-scrollable": "github:PolymerElements/paper-dialog-scrollable",
+    "@polymer/paper-dropdown-menu": "github:PolymerElements/paper-dropdown-menu",
     "@polymer/paper-icon-button": "github:PolymerElements/paper-icon-button",
     "@polymer/paper-input": "^3.0.1",
+    "@polymer/paper-item": "github:PolymerElements/paper-item",
+    "@polymer/paper-listbox": "github:PolymerElements/paper-listbox",
     "@polymer/polymer": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "web-animations-js": "^2.3.1"
   },
   "devDependencies": {
     "polymer-cli": "^1.7.1",
