added some demo states and fixed bug in widget

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -12,6 +12,11 @@
       "src": "images/manifest/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "images/favicon.ico",
+      "sizes": "64x64",
+      "type": "image/ico"
     }
   ],
   "start_url": "/",
