--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "@polymer/paper-toggle-button": "github:PolymerElements/paper-toggle-button",
     "@polymer/polymer": "^3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "file-saver": "^2.0.2",
     "lit-element": "github:Polymer/lit-element",
     "web-animations-js": "^2.3.1"
   },
