--- a/homecon-react/public/manifest.json
+++ b/homecon-react/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Homecon",
+  "name": "Homecon",
   "icons": [
     {
       "src": "favicon.ico",
