--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^12.2.0",
     "date-fns": "^2.16.1",
     "fontsource-roboto": "^3.0.3",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "recharts": "^2.1.6",
     "web-vitals": "^0.2.4",
     "websocket": "^1.0.32"
   },
